--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,8 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "oracle-ssh": "^1.0.0",
-    "oracledb": "^5.4.0",
     "pg": "^8.7.3",
     "pgtools": "^0.3.2",
-    "tunnel-ssh": "^4.1.6"
+    "sequelize": "^6.21.3"
   }
 }
