initialized react app

--- a/react-ui/.gitignore
+++ b/react-ui/.gitignore
@@ -1,29 +1,17 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# npm
-node_modules
-package-lock.json
-*.log
-*.gz
-
-#npm -react
+# dependencies
+/node_modules
 /.pnp
 .pnp.js
 
-# Coveralls
-.nyc_output
-coverage
+# testing
+/coverage
 
 # production
 /build
 
-# Benchmarking
-benchmarks/graphs
-
-# env variables
-.env
-
-# misc - react
+# misc
 .DS_Store
 .env.local
 .env.development.local
@@ -33,6 +21,3 @@ benchmarks/graphs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# ignore additional files using core.excludesFile
-# https://git-scm.com/docs/gitignore
